force-app/main/default/objects/Container__c/fields/Cajas__c.field-meta.xml
<CustomField>
    <fullName>Cajas__c</fullName>
    <label>Cajas</label>
    <summarizedField>Container_Pedido_Line_Item__c.Cajas__c</summarizedField>
    <summaryForeignKey>Container_Pedido_Line_Item__c.Container__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>