force-app/main/default/objects/Container__c/fields/Fecha_Carga_Contenedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga_Contenedor__c</fullName>
    <inlineHelpText>Container loading date</inlineHelpText>
    <label>Fecha Carga Contenedor</label>
    <type>Date</type>
</CustomField>