force-app/main/default/objects/Container__c/fields/SEAL__c.field-meta.xml
<CustomField>
    <fullName>SEAL__c</fullName>
    <label>SEAL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>