force-app/main/default/objects/Container__c/fields/Total_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_CBM__c</fullName>
    <label>Total CBM</label>
    <summarizedField>Container_Pedido_Line_Item__c.CBM__c</summarizedField>
    <summaryForeignKey>Container_Pedido_Line_Item__c.Container__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>