force-app/main/default/objects/Container__c/fields/Total_Gross_W__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_W__c</fullName>
    <label>Total Gross W</label>
    <summarizedField>Container_Pedido_Line_Item__c.Gross_Weight__c</summarizedField>
    <summaryForeignKey>Container_Pedido_Line_Item__c.Container__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>