force-app/main/default/objects/Container__c/fields/Total_Productos__c.field-meta.xml
<CustomField>
    <fullName>Total_Productos__c</fullName>
    <label>Total Productos</label>
    <summarizedField>Container_Pedido_Line_Item__c.Total_Productos__c</summarizedField>
    <summaryForeignKey>Container_Pedido_Line_Item__c.Container__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>