force-app/main/default/objects/Container__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>20 GP</fullName>
            </value>
            <value>
                <fullName>40 GP</fullName>
            </value>
            <value>
                <fullName>40 HQ</fullName>
            </value>
            <value>
                <fullName>40 NOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>